# assitant

./: .gitignore  GPT_SOVITS_SETUP.md  GPT_SOVITS_START_CMD_EXAMPLE.txt  gpt_sovits_kurisu.py  kurisu_voice_final.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start_all.cmd  start_companion.cmd  start_companion_debug.cmd  tmp_post_bridge_test.py  tmp_post_gpt_forwardslash.py  tmp_post_gpt_utf8.py  tmp_requirements_no_pyopenjtalk.txt  tmp_verify_bridge_tts.py  voice_api_server.py  voice_api_server_v2.py  voice_clone_engine.py
.electron-user-data/session/: Local State  Preferences
.electron-user-data/session/DawnGraphiteCache/: data_1  index
.electron-user-data/session/DawnWebGPUCache/: data_1  index
.electron-user-data/session/GPUCache/: data_1  index
Amadeus-main/: README.md
Amadeus-main/Dialogues/: emails.json
Amadeus-main/Extensions/: divergence.py
Amadeus-main/Prompts/: Kurisu_EN.md
desktop/: main.js  pet.css  pet.html  pet.js  preload.js  smoke-main.js
docs/: amadeus_asset_usage.md  voice_interaction_upgrade_design.md  voice_pipeline.md
scripts/: import_novels.py  install_startup.ps1  install_voice_stack.ps1  run_backend.ps1  run_desktop.ps1  start_all_in_one.ps1  test_edge_tts.py  test_gpt_sovits_voice.py  test_turn_app.py  verify_import.py
src/assistant_app/: __main__.py  app.py  asr.py  companion_seed.py  gpt_sovits.py  memory.py  secret_store.py  settings.py  soul.py  stdlib_server.py  turn.py  voice.py  vtube.py
tests/: test_gpt_sovits.py  test_permissions.py  test_research.py  test_soul.py  test_turn.py
(+21 files in other folders)
