[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-desktop-research-companion"
version = "0.1.0"
description = "Windows desktop research companion with DeepSeek, memory, and VTube Studio hooks."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "websockets>=12",
  "pydantic>=2.7",
  "SpeechRecognition>=3.10",
  "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["src"]


